# ai-registry

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-runtime.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: default.yaml  dev.yaml
src/: app.py  config.py  config_loader.py  reaper.py  store.py
src/routes/: __init__.py  _auth.py  health.py  heartbeat.py  lookup.py  register.py  ui.py
src/ui/: index.html
tests/component/: test_registry_app_lifecycle.py
tests/unit/: test_config.py  test_config_loader.py  test_env_filter.py  test_reaper.py  test_routes_health.py  test_routes_heartbeat.py  test_routes_lookup.py  test_routes_register.py  test_smoke.py  test_store.py
